# HypePaper

./: .env.production.example  .gitignore  .mcp.json  CLAUDE.md  CONFERENCE_CRAWLER_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  GET_CORRECT_CONNECTION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SUPABASE_MIGRATION_COMPLETE.md  TESTING.md  complete_implementation.py  docker-compose.yml  nixpacks.json  nixpacks.toml  package-lock.json  quickstart.sh  railway.json  railway.toml  test_github_io_minimal.py
backend/: .env.example  IMPLEMENTATION.md  README.md  SECURITY_AUDIT.md  add_citation_tracking.sql  add_match_score.sql  alembic.ini  apply_user_profiles_migration.sql  check_db.py  create_crawler_jobs_table.sql  find_supabase_url.sh  init_db.sql  migrate_to_supabase.sh  pyproject.toml  requirements.prod.txt  requirements.txt  seed_topics.py  sync_supabase_schema.sql  test_conference_crawler.py  update_venues.py  verify_supabase.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema_with_timescaledb.py  002_add_performance_indexes.py  20251008_002_add_legacy_fields_and_new_tables.py  20251009_1849_c87e71e8eb12_add_user_support_to_topics_and_papers.py  add_papers_indexes.py  (+14 more)
backend/configs/: base.json  database.json  github.json  llm.json  prompts.json
backend/scripts/: download_llm_model.py  implement_user_features.py  seed_sample_data.py  seed_topics.py
backend/src/: config.py  database.py  main.py
backend/tests/: conftest.py  test_github_io_detection.py  test_github_io_simple.py  test_improved_github_validation.py
(+243 files in other folders)
